Project

General

Profile

Actions

Bug #5324

closed

radosgw-admin --help missing the --shard-id option

Added by Anonymous almost 11 years ago. Updated almost 11 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
Regression:
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The new 'mdlog trim' call requires a --shard-id option be specified but that option is not listed in the --help output.

Actions #1

Updated by Christophe Courtaut almost 11 years ago

Hi,

Here comes a fix for this bug.

https://github.com/ceph/ceph/pull/382

Best

Actions #2

Updated by Yehuda Sadeh almost 11 years ago

  • Status changed from New to In Progress
Actions #4

Updated by Yehuda Sadeh almost 11 years ago

  • Status changed from In Progress to Resolved
Actions

Also available in: Atom PDF