rgw: admin: Add --shard-id option to help

http://tracker.ceph.com/issues/5324 fixes #5324
Explains operations dependency,
which is more important than the semantic.

Signed-off-by: Christophe Courtaut <christophe.courtaut@gmail.com>